--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -57,9 +57,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [Lede_XiaoMi_cr660x]
+        target: [Lede_gdock_2]
 
-        # [Lede_gdock_2,Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic]
+        # [Lede_gdock_2,Lede_XiaoMi_cr660x,Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic]
 
     
     steps:
