--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -40,9 +40,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [Lede_XiaoMi_cr660x]
+        target: [Lede_gdock_2]
         
-        # [Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic]
+        # [Lede_XiaoMi_cr660x,Lede_gdock_2,Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic]
 
     steps:
     - name: 准备结束
