--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -16,7 +16,7 @@ on:
     branches:
       - main
     paths:
-      - 'config'
+      - '-config-'
 
 env:
   Github: https://github.com/${{github.repository}}
@@ -40,7 +40,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [Lede_XiaoMi_cr660x]
+        target: [Lienol_source]
         
         # [Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic]
 
@@ -130,7 +130,6 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE
         source $BUILD_PATH/common.sh && Package_amlogic
-
     - name: 整理固件文件夹(需配合diy-part.sh设定使用)
       continue-on-error: true
       id: organizer
