--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -59,9 +59,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [Lede_source]
+        target: [XM_Lede_source]
 
-        # [Lede_gdock_2,Lede_XiaoMi_cr660x,Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic]
+        # [Lede_gdock_2,Lede_XiaoMi_cr660x,Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic,XM_Lede_source]
 
     
     steps:
