--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -42,7 +42,7 @@ jobs:
       matrix:
         target: [XM_Lede_source,Lede_source_gdock]
         
-        # [Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic]
+        # [XM_Lede_source,Lede_source_gdock,Lede_source,Lienol_source,Mortal_source,Tianling_source,openwrt_amlogic]
 
     steps:
     - name: 准备结束
